    not return a Content-Type
  * fixed several bugs in the search regarding the use of special characters
  * fix compatibility issue with Ontotext GraphDB 9.0
  * enabled support for multiple administrators
  * updated to RDF4J 3.0.0
  * added fully support for OWL 2 restrictions
  * added service for deleting repositories on remote triple stores
  
version 6.0
date: 27/06/2019
  * Enabled multiple dataDumps in dataset catalogs
  * Added support for archives containing RDF data to preloading and loadData
  * Integrated support for connecting to a matching system, specifically GENOMA (the connection protocol is meant to be general, though)
  * Added a Dataset Catalog connector for the European Union Open Data Portal (ODP) (https://data.europa.eu/euodp/)
  * Added services for creating Lucene indexes for the resources in the projects and for searching over these indexes (Global Search)
  * Added support for blacklisting, integrated with the validation machinery
  * Extended the MAPLE service to generate reports on alignment scenarios, supporting decisions and strategies for alignment
  * Removed the redundant indication of the role of predicates in the Resource View
  * Added the possibility to specify a template for enriching the output of predefined rendering engines
    (e.g. to include a skos:notation)
  * Added support for Graph View in VocBench.
  * Fixed exception about missing configuration when exporting the results of a SPARQL graph query after the
    application of some RDFTransformers
  * Added server-side computation of the nature of the triples in the ResourceView
  * Fixed some compatibility issues with Java 11
  * Fixed "authorization denied" when replacing an IRI value via Resources.updateTriple()
  * Fixed the possibility to have more prefixed for the same namespace
  * Fixed NullPointerException in the service MAPLE/profileSingleResourceMatchProblem (by updating MAPLE)
  * Fixed inability to disable history (in the ChangeTracker sail)